kasko2/4 stop jumping 'ДА' button

--- a/source/less/blocks/test.less
+++ b/source/less/blocks/test.less
@@ -398,7 +398,8 @@
     .test__selection {
       &.ui.selection.dropdown{
         background-color: transparent;
-        padding-left: 35px;
+        padding-left: 38px;
+        top: 1px;
         left: -20px;
         width: 100%;
       }
